# MUSExpert

./: pip_requirements  setup.py
docs/: conf.py  index.rst  inspectro.rst  pylet.rst
musexpert/: __init__.py  inspectro.py  slit.py
musexpert/incubator/: CMakeLists.txt  cube.c  fortran.h  funcs.f95  incubator.c  incubator.f95
musexpert/pylet/: __init__.py  globals.py  utils.py
musexpert/pylet/data/: default.param  emlines  emlines_small  nb_default.param
